<resources>
    <string name="app_name">ChemistryAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="normal_mode_button">Calculator</string>
    <string name="chemistry_mode_button">Chemistry</string>
    <string name="periodic_table_button">Periodic table</string>
    <string name="solubility_table_button">Solubility table</string>
    <string name="history_button">History</string>
    <string name="select_mode_text">Select mode</string>
    <string name="result_hint">Result</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="backspace">Del</string>
    <string name="clear">С</string>
    <string name="decimal">,</string>
    <string name="equal">=</string>
    <string name="pos_neg">+/-</string>
    <string name="back_on_the_previous_page">Back</string>
    <string name="author">developed by Lukaskeyn</string>
    <string name="prevNumber">Previous value</string>
    <string name="CurrentNumber">Current value</string>
    <string name="to_periodic_table">To periodic table</string>
    <string name="period">P</string>
    <string name="row">R</string>
    <string name="elements_group">Element\'s group</string>
    <string name="group_1">I</string>
    <string name="group_2">II</string>
    <string name="group_3">III</string>
    <string name="group_4">IV</string>
    <string name="group_5">V</string>
    <string name="group_6">VI</string>
    <string name="group_7">VII</string>
    <string name="group_8">VIII</string>
    <string name="hydrogen">H</string>
    <string name="lithium">Li</string>
    <string name="beryllium">Be</string>
    <string name="boron">B</string>
    <string name="carbon">C</string>
    <string name="nitrogen">N</string>
    <string name="sodium">Na</string>
    <string name="magnesium">Mg</string>
    <string name="aluminium">Al</string>
    <string name="silicon">Si</string>
    <string name="phosphorus">P</string>
    <string name="potassium">K</string>
    <string name="calcium">Ca</string>
    <string name="scandium">Sc</string>
    <string name="titanium">Ti</string>
    <string name="vanadium">V</string>
    <string name="copper">Cu</string>
    <string name="zinc">Zn</string>
    <string name="gallium">Ga</string>
    <string name="germanium">Ge</string>
    <string name="arsenic">As</string>
    <string name="rubidium">Rb</string>
    <string name="strontium">Sr</string>
    <string name="yttrium">Y</string>
    <string name="zirconium">Zr</string>
    <string name="niobium">Nb</string>
    <string name="silver">Ag</string>
    <string name="cadmium">Cd</string>
    <string name="indium">In</string>
    <string name="tin">Sn</string>
    <string name="antimony">Sb</string>
    <string name="caesium">Cs</string>
    <string name="barium">Ba</string>
    <string name="lanthan">La</string>
    <string name="hafnium">Hf</string>
    <string name="tantalum">Ta</string>
    <string name="gold">Au</string>
    <string name="mercury">Hg</string>
    <string name="thallium">Tl</string>
    <string name="lead">Pb</string>
    <string name="bismuth">Bi</string>
    <string name="francium">Fr</string>
    <string name="radium">Ra</string>
    <string name="actinium">Ac</string>
    <string name="rutherfordium">Rf</string>
    <string name="dubnium">Db</string>
    <string name="molecular_equal">M =</string>
    <string name="next_page">Next</string>
    <string name="helium">He</string>
    <string name="oxygen">O</string>
    <string name="fluorum">F</string>
    <string name="neon">Ne</string>
    <string name="sulfur">S</string>
    <string name="chlorium">Cl</string>
    <string name="argon">Ar</string>
    <string name="chromium">Cr</string>
    <string name="manganese">Mn</string>
    <string name="ferrum">Fe</string>
    <string name="cobalt">Co</string>
    <string name="nickel">Ni</string>
    <string name="selenium">Se</string>
    <string name="bromum">Br</string>
    <string name="krypton">Kr</string>
    <string name="molibdaenum">Mo</string>
    <string name="technetium">Tc</string>
    <string name="ruthenium">Ru</string>
    <string name="rhodium">Rh</string>
    <string name="palladium">Pd</string>
    <string name="tellurium">Te</string>
    <string name="iodum">I</string>
    <string name="xenon">Xe</string>
    <string name="wolframium">W</string>
    <string name="rhenium">Re</string>
    <string name="osmium">Os</string>
    <string name="iridium">Ir</string>
    <string name="cerium">Ce</string>
    <string name="praseodium">Pr</string>
    <string name="platinum">Pt</string>
    <string name="neodymium">Nd</string>
    <string name="promethium">Pm</string>
    <string name="samarium">Sm</string>
    <string name="europium">Eu</string>
    <string name="gadolinium">Gd</string>
    <string name="terbium">Tb</string>
    <string name="dysprosium">Dy</string>
    <string name="holmium">Ho</string>
    <string name="erbium">Er</string>
    <string name="thulium">Tm</string>
    <string name="ytterbium">Yb</string>
    <string name="lutetium">Lu</string>
    <string name="polonium">Po</string>
    <string name="astatium">At</string>
    <string name="radon">Rn</string>
    <string name="seaborgium">Sg</string>
    <string name="bohrium">Bh</string>
    <string name="hassium">Hs</string>
    <string name="meitnerium">Mt</string>
    <string name="darmshtatium">Ds</string>
    <string name="thorium">Th</string>
    <string name="protactinium">Pa</string>
    <string name="uranium">U</string>
    <string name="neptunium">Np</string>
    <string name="plutonium">Pu</string>
    <string name="americium">Am</string>
    <string name="curium">Cm</string>
    <string name="berkelum">Bk</string>
    <string name="californium">Cf</string>
    <string name="einsteinium">Es</string>
    <string name="fermium">Fm</string>
    <string name="mendelevium">Md</string>
    <string name="nobelium">No</string>
    <string name="lawrencium">Lr</string>
    <string name="enter_value">Enter a value</string>
    <string name="density">p</string>
    <string name="flaskVolume">Vf</string>
    <string name="u_m">U.m.</string>
    <string-array name ="mWeight">
        <item>g/mol</item>
    </string-array>
    <string-array name ="density">
        <item>g/ml</item>
        <item>kg/l</item>
    </string-array>
    <string-array name ="volumeOfFlask">
        <item>ml</item>
    </string-array>
    <string-array name ="volumeX">
        <item>ml</item>
        <item>ul</item>
    </string-array>
    <string name="volume_mass">w</string>
    <string-array name ="u_m_volume_mass">
        <item>%</item>
    </string-array>
    <string name="toChemistryModeButton">To calculations</string>
    <string-array name ="volumeOfFlaskValue">
        <item>1000</item>
        <item>2000</item>
        <item>500</item>
        <item>250</item>
        <item>200</item>
        <item>100</item>
        <item>50</item>
        <item>25</item>
        <item>10</item>
    </string-array>
    <string name="concentration">c</string>
    <string name="concentrationX">Cx</string>
    <string-array name ="u_m_concentration">
        <item>mol/l</item>
        <item>%</item>
        <item>mg/l</item>
        <item>mg/kg</item>
    </string-array>
    <string name="volume_x">Vx</string>
    <string-array name ="function">
        <item>Dilution</item>
        <item>Preparation of c (mol/l)</item>
    </string-array>
    <string name="calculate">Calculate</string>
    <string name="formula_dilution">Vx = (Cx*Vf)/c</string>
    <string name="formula_preparationMol">Vx = (c * M)/ (p *(w/100))</string>
</resources>