<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_page_back_2">

    <TextView
        android:id="@+id/SelectModeTextView"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/start_page_back_2"
        android:fontFamily="@font/amita"
        android:text="@string/select_mode_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageButtonNormalMode"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:background="@color/start_page_back_2"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cursor1"
        app:srcCompat="@drawable/cloud_right" />

    <ImageView
        android:id="@+id/imageButtonChemistryMode"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:background="@color/start_page_back_2"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cursor2"
        app:srcCompat="@drawable/cloud_left" />

    <TextView
        android:id="@+id/textViewNormalMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita"
        android:rotation="-25"
        android:text="@string/normal_mode_button"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonNormalMode"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonNormalMode"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/imageButtonNormalMode"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNormalMode"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textViewChemistryMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita"
        android:rotation="25"
        android:text="@string/chemistry_mode_button"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonChemistryMode"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonChemistryMode"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/imageButtonChemistryMode"
        app:layout_constraintTop_toTopOf="@+id/imageButtonChemistryMode"
        app:layout_constraintVertical_bias="0.38" />

    <ImageView
        android:id="@+id/cursor1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        android:rotation="33"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonNormalMode"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonNormalMode"
        app:layout_constraintStart_toStartOf="@+id/imageButtonNormalMode"
        app:layout_constraintTop_toBottomOf="@+id/SelectModeTextView"
        app:srcCompat="@drawable/cursor" />

    <ImageView
        android:id="@+id/cursor2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        android:rotation="-33"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonChemistryMode"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonChemistryMode"
        app:layout_constraintStart_toStartOf="@+id/imageButtonChemistryMode"
        app:layout_constraintTop_toBottomOf="@+id/SelectModeTextView"
        app:srcCompat="@drawable/cursor" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/pinkPuddle"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/extralight2" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lovers_quarrel"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/pinkPuddle"
        app:layout_constraintStart_toStartOf="@+id/pinkPuddle"
        app:layout_constraintTop_toTopOf="@+id/pinkPuddle" />

</androidx.constraintlayout.widget.ConstraintLayout>